Refactor doctor management form and enhance internationalization support